2023-10-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha03: Caring Bridge';git push
	git tag -a 5.1.9-alpha03 -m 'ncap2: refactor exit();';git push --tags

	* Henry fixed parsing of NC_MIN_INT64 so limits.nco now completes successfully

2023-10-24  Charlie Zender  <zender@uci.edu>

	* Cleanup ncap2 limits.nco test, which fails on MacOS and Linux

2023-10-20  Charlie Zender  <zender@uci.edu>

	* in_zarr4.cdl: Temporarily eliminate NC_UNLIMITED dimension so NCO 5.1.9+ distribution does not break when building with netCDF <= 4.9.2

	* ncap2 main() return with nco_exit_gracefully(), like other operators

	* ncap2 main() return with EXIT_SUCCESS instead of antlr_ret (which was 133?)

	* ncap2 add -v synonyms extract_defined_derived_variables, xtr_dfn_drv_var

2023-10-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha02: Elk Rut';git push
	git tag -a 5.1.9-alpha02 -m 'all: NCZarr unlim dim; ncremap --mpt_mss';git push --tags

	* Document --mpt_mss

	* Implement --mpt_mss as ncremap switch and pass-through. Solves problem.

	* Implement flg_mpt_mss so MPAS-Seaice data remains, by default, zero in open-ocean regions

	* Verify that ncgen produces, and ncks reads, NCZarr-format in_zarr4. Yay!

	* Restore NC_UNLIMITED dimension to in_zarr4.cdl after PR #2744 added support

2023-10-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha01: Bandelier';git push
	git tag -a 5.1.9-alpha01 -m 'Functionally identical to 5.1.8 (except ncremap)';git push --tags

	* Add ncremap invocations for trbilin, trintbilin

	* Add ncremap synonyms esmfaave, ncoaave, traave, esmfbilin, esmfndtos

2023-09-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8 release procedure:
	cd ~/nco;git commit -a -m "Version 5.1.8: Cafe Pasqual\'s";git push